--- a/index.html
+++ b/index.html
@@ -1,44 +1,58 @@
 <html>
-  <head>
+
+<head>
+    <title>Планети Сонячної системи</title>
     <link rel="stylesheet" href="style.css"/>
-  </head>
-  </head>
-    <body>
-        <header>
-            <a href="#price">Прайс-лист</a> <a href="#reviews">Відгуки</a> <a href="#photos">Фотографії</a>
-        </header>
-        <main>
-            <h1>Phone Repair<br/><img src="/uploads/2020/11/soldering-5117508_1280_0_1605278553.png" width="200px"/> <img src="/uploads/2020/11/tool-145376_1280_0_1605278554.png" width="200px"/> <img src="/uploads/2020/11/guy-1424911_1280_0_1605278554.png" width="200px" height="190px"/></h1>
-            <h2 id="price">Послуги та ціни</h2>
-            <table>
-                <tr>
-                    <td>Назва послуги</td>
-                    <td>Ціна</td>
-                    <td>Термін виконання</td>
-                </tr>
-                <tr>
-                    <td>Заміна роз'єму <br/>зарядки</td>
-                    <td>250 грн.</td>
-                    <td>1 день</td>
-                </tr>
-                <tr>
-                    <td>Заміна екрану</td>
-                    <td>від 500 грн.</td>
-                    <td>від 2-х днів</td>
-                </tr>
-                <tr>
-                    <td>Перепрошивка</td>
-                    <td>від 400 грн.</td>
-                    <td>1 день</td>
-                </tr>
-            </table>
-            <h2 id="reviews">Відгуки</h2>
-            <p><i>Наталя: </i>Зламався роз'єм для заряджання в новому iPhone. Полагодили оперативно. Була в офісі на Ремонтній вулиці.</p>
-            <p><i>Максим: </i>Потрібно було рятувати телефон від вірусів. Думав все - втрачу і дані, і телефон. Дякую хлопцям на проспекті Прогресу – дані витягли, телефон відновили.</p>
-            <p><i>Юля: </i>Розбила екран планшета і одразу побігла до майстерні на Ремонтній вулиці. Правда екрану для моєї моделі не було, але хлопці зробили замовлення і телефон отримала через три дні.</p>
-            <h2 id="photos">Фотографії</h2>
-            <img src="/uploads/2020/11/broken-3653897_1920_0_1605280313.jpg" height="250px"/> <img src="/uploads/2020/11/mobile-phone-2510529_1920_0_1605280314.jpg" height="250px"/><br/>
-            <img src="/uploads/2020/11/mobile-phone-4381895_1920_0_1605280472.jpg" width="790px"/>
-        </main>
-    </body>
+</head>
+
+<body>
+    <header>
+        <!-- Шапка: назва сайту, логотип, навігація -->
+        <h1>
+            Планети Сонячної системи
+        </h1>
+       <nav>
+           <a href="#mercury">МЕРКУРІЙ</a>
+           <a href="#venus">ВЕНЕРА</a>
+            <a href="#mars">МАРС</a>
+        </nav>
+
+
+    </header>
+    <main>
+        <!-- Основна інформація сайту -->
+        <section id="mercury">
+            <h2>
+                MERCURY
+            </h2>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/4/4a/Mercury_in_true_color.jpg"/>
+            <p>
+             Меркурій - найменша і найближча до Сонця планета Сонячної системи. Він має найкоротший рік (88 земних діб) і найшвидший орбітальний рух серед усіх планет. Меркурій також характеризується великими температурними коливаннями, від -173°C вночі до +427°C вдень. 
+            </p>
+        </section>
+        <section id="venus">
+            <h2>
+                VENUS
+            </h2>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTU3McSytZFcxAqzZHBxO7-cPJMqH2vfmx0nA&s"/>
+            <p>
+            Венера, друга планета від Сонця, є однією з найяскравіших небесних тіл на нашому небі. Вона відома своєю щільною атмосферою, високими температурами та ретроградним обертанням.
+            </p>
+        </section>
+        <section id="mars">
+            <h2>
+                MARS
+            </h2>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/02/OSIRIS_Mars_true_color.jpg/330px-OSIRIS_Mars_true_color.jpg"/>
+            <p>
+            Марс, четверта планета від Сонця, відома як "Червона планета" через колір своєї поверхні, спричинений великою кількістю оксидів заліза.Марсіанська гора Олімп – найвища гора в Сонячній системі, її висота становить 27,4 кілометра. 
+            </p>
+        </section>
+    </main>
+    <footer>
+        <!-- Підвал з додатковою інформацією та підписом автора -->
+        
+    </footer>
+</body>
+
 </html>
