--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
     <header>
         <!-- Шапка: назва сайту, логотип, навігація -->
         <h1>
-            Планети Сонячної системи
+            Планети Сонячної системи 🌌
         </h1>
        <nav>
-           <a href="#mercury">МЕРКУРІЙ</a>
-           <a href="#venus">ВЕНЕРА</a>
+            <a href="#mercury">МЕРКУРІЙ</a>
+            <a href="#venus">ВЕНЕРА</a>
+            <a href="#earth">ЗЕМЛЯ</a>
             <a href="#mars">МАРС</a>
         </nav>
 
@@ -27,16 +28,25 @@
             </h2>
             <img src="https://upload.wikimedia.org/wikipedia/commons/4/4a/Mercury_in_true_color.jpg"/>
             <p>
-             Меркурій - найменша і найближча до Сонця планета Сонячної системи. Він має найкоротший рік (88 земних діб) і найшвидший орбітальний рух серед усіх планет. Меркурій також характеризується великими температурними коливаннями, від -173°C вночі до +427°C вдень. 
+             Меркурій - найменша і найближча до Сонця планета Сонячної системи. Він має найкоротший рік (88 земних діб) і найшвидший орбітальний рух серед усіх планет. Меркурій також характеризується великими температурними коливаннями, від -173°C вночі до +427°C вдень.👽
             </p>
         </section>
         <section id="venus">
             <h2>
                 VENUS
             </h2>
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTU3McSytZFcxAqzZHBxO7-cPJMqH2vfmx0nA&s"/>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/0/08/Venus_from_Mariner_10.jpg"/>
             <p>
-            Венера, друга планета від Сонця, є однією з найяскравіших небесних тіл на нашому небі. Вона відома своєю щільною атмосферою, високими температурами та ретроградним обертанням.
+            Венера, друга планета від Сонця, є однією з найяскравіших небесних тіл на нашому небі. Вона відома своєю щільною атмосферою, високими температурами та ретроградним обертанням.🌕
+            </p>
+        </section>
+        <section id="earth">
+            <h2>
+                EARTH
+            </h2>
+            <img src="https://learn.logikaschool.com/uploads/student/3171229/6857bb65897d5.jpg"/>
+            <p>
+            Земля - третя планета від Сонця, єдина відома планета, на якій існує життя. Вона утворилася близько 4,5 мільярдів років тому і має унікальні умови для розвитку та підтримки життя, включаючи воду, повітря та відповідну температуру.🌎 
             </p>
         </section>
         <section id="mars">
@@ -45,13 +55,13 @@
             </h2>
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/02/OSIRIS_Mars_true_color.jpg/330px-OSIRIS_Mars_true_color.jpg"/>
             <p>
-            Марс, четверта планета від Сонця, відома як "Червона планета" через колір своєї поверхні, спричинений великою кількістю оксидів заліза.Марсіанська гора Олімп – найвища гора в Сонячній системі, її висота становить 27,4 кілометра. 
+            Марс, четверта планета від Сонця, відома як "Червона планета" через колір своєї поверхні, спричинений великою кількістю оксидів заліза.Марсіанська гора Олімп – найвища гора в Сонячній системі, її висота становить 27,4 кілометра.🔭
             </p>
         </section>
     </main>
     <footer>
         <!-- Підвал з додатковою інформацією та підписом автора -->
-        
+        Цей сайт я зробив,щоб дізнатися більше інформації про космос. 🚀
     </footer>
 </body>
 
